Bug when adding Background Images #61163

Closed
opened 2019-02-03 17:10:04 +01:00 by João Rosado · 7 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1060 6Gb

Blender Version
Broken: 2.80, 2019-02-02
Worked: (optional)

Short description of error

  1. When adding a background image the Origin point can be visible on the 3D viewport as well as on the orthographic views and that's is annoying when modeling.
  2. In some orthographic camera views (Back, Bottom and Left) we can still see the Black outline of other Background images already added.

Exact steps for others to reproduce the error
So 3 images that describe the problem and the blend file if needed.bug.blend

1.png

2.png

3.png

**System Information** Operating system: Windows 10 Graphics card: GTX 1060 6Gb **Blender Version** Broken: 2.80, 2019-02-02 Worked: (optional) **Short description of error** 1. When adding a background image the Origin point can be visible on the 3D viewport as well as on the orthographic views and that's is annoying when modeling. 2. In some orthographic camera views (Back, Bottom and Left) we can still see the Black outline of other Background images already added. **Exact steps for others to reproduce the error** So 3 images that describe the problem and the blend file if needed.[bug.blend](https://archive.blender.org/developer/F6496579/bug.blend) ![1.png](https://archive.blender.org/developer/F6496562/1.png) ![2.png](https://archive.blender.org/developer/F6496607/2.png) ![3.png](https://archive.blender.org/developer/F6496568/3.png)
Author

Added subscriber: @jprosado

Added subscriber: @jprosado

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

@brecht who to assign this to?

@brecht who to assign this to?

This issue was referenced by 2c84c23a07

This issue was referenced by 2c84c23a074e315581f374c93039c2ebfa56a947

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Issue #1 is working as intended, you need a way to see the object center and that it's selected when moving objects.
De-selecting hides the center point, reference objects can be kept on a collection with select-ability disabled - if you want them not to get in the way.

Issue #1 is working as intended, you need a way to see the object center and that it's selected when moving objects. De-selecting hides the center point, reference objects can be kept on a collection with select-ability disabled - if you want them not to get in the way.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61163
No description provided.