Fix T61163: Single sided images show when viewed from side